--- a/config/default.conf
+++ b/config/default.conf
@@ -53,9 +53,15 @@ server {
     # index empty.html;
     autoindex on;
     root www/serverDB;
-    # allow_methods GET POST DELETE;
+    # client_max_body_size 10;
+    allow_methods GET POST DELETE;
   }
 }
+
+# server {
+#   listen 127.0.0.1:80;
+#   root www;
+# }
 
 server {
   listen 8001;
