--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "webserv-final-version",
+  "name": "webserv-final-version_1.0",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
